--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,12 +14,17 @@ dependencies:
   fl_chart: ^0.65.0
   video_player: ^2.8.2 
   intl: ^0.20.2
+  http: ^1.1.0
+  cached_network_image: ^3.3.0
+  shared_preferences: ^2.2.0  # Use the latest version
+
   
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  
 
 flutter:
   uses-material-design: true
